# airpen

./: .gitignore  README.md  dataset_json_to_numpy.py  drift.py  export_executorch.py  lowpass.py  net.py  plot.py  plot_cm.py  preprocess.py  pyproject.toml  record_rot.py  rot_analysis.py  rot_analysis2.py  rot_analysis3.py  time_record.py  to_onnx.py  to_tflite.py  todo.md  vis.py  vis3.py  vis_anim.py  vis_pca.py  vis_random.py  vis_transform.py
data/: csvs_to_npz.py  dataset_json_to_numpy.py  inference.csv  preprocess.py  split.py  test.csv  test2.csv
firmware/dummy/: compile_commands.json  platformio.ini
firmware/dummy/src/: main.cpp  model_data.h
firmware/pen_fw/: platformio.ini
firmware/pen_fw/src/: main.cpp
firmware/pen_fw_mpu9250/: main2.cpp  main3.cpp  platformio.ini
firmware/pen_fw_mpu9250/src/: main.cpp
ml/: dataset.py  inference.py  inference_serv.py  main.py  net.py  processing.py  record.py  test.py  train.py  utils.py
ml/configs/: inference.yaml  test.yaml  train.yaml
pen_fw/src/: main.cpp
